--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
   "name": "dawguk/php-garmin-connect",
   "description": "A PHP adapter for interrogating the Garmin Connect \"API\"",
   "require": {
-    "php": ">=5.3.0"
+    "php": ">=5.3.0",
+    "ext-curl": "*",
+    "ext-json": "*"
   },
   "license": "MIT",
   "autoload": {
